[package]
name = "SteamUtility"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-include]
resources = "res"

[build-dependencies]
winres = "0.1.12"

[dependencies]
winreg = "0.55.0"
serde_json = "1.0.138"
steamworks = "0.11.0"
regex = { version = "1.11.1", default-features = false, features = ["unicode-perl"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }